# DroidForensics-Suite

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  examples.md  forensic_workflow.md  main.py  pyproject.toml  run_forensics.bat  run_forensics.py  run_forensics.sh  run_ui.bat  run_ui.py  test_server.py
agents/: __init__.py  deep_agent.py  forensic_agent.py  interactive_agent.py
forensic_output/reports/: 001_report.html  001_report.md  FIA-20251223-011736_report.html
mcp_servers/: __init__.py  app_analyzer.py  artifact_parser.py  data_acquisition.py  device_manager.py  report_generator.py  system_forensics.py
tests/: __init__.py  test_adb_connection.py  test_async_operations.py  test_attack_scenarios.py  test_comprehensive_scenarios.py  test_mcp_servers.py  test_stress.py
ui/: __init__.py  app.py  streamlit_app.py
